@@ -1142,3 +1142,4 @@
 20041222 display.c,screenshot.c: Fix compilation without libpng.
 20041225 display.c,event.[ch],machine.c: first pass at character-accurate
 	 rendering.
+20041225 widget/widget.c: Add joystick prompt when loading snaps for widget UI.
